# sam3d_wrapper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: clip_to_poses.sh  download_checkpoints.sh  fuse_two_views.py  gaussian_avatar.py  gaussian_avatar.sh  infer_coreview377.py  infer_coreview386.py  infer_with_mask.py  inference.sh  setup.sh  setup_sam3.sh
src/sam3d_wrapper/: __init__.py  download.py  inference.py  multiview_fusion.py  repo.py  visualization.py
tests/: test_multiview_fusion.py
tools/: download_youtube.py  download_youtube_batch.py  extract_frames.py  red_jersey_inference.py  youtube_list.txt
