[project]
name = "sam3d-wrapper"
version = "0.1.0"
description = "A convenient wrapper for Meta's SAM 3D Body for easy installation and batch inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "torch>=2.0",
    "torchvision>=0.15",
    "pytorch-lightning>=2.0",
    "einops>=0.7",
    "timm>=0.9",
    "roma>=1.3",

    # Computer vision
    "opencv-python>=4.8",
    "pyrender>=0.1.45",
    "scikit-image>=0.21",
    "trimesh>=4.0",
    "Pillow>=10.0",

    # Config / utilities
    "hydra-core>=1.3",
    "hydra-colorlog>=1.2",
    "pyrootutils>=1.0",
    "yacs>=0.1.8",
    "fvcore>=0.1.5",
    "loguru>=0.7",
    "optree>=0.9",
    "rich>=13.0",
    "dill>=0.3",
    "appdirs>=1.4",
    "joblib>=1.3",

    # Data
    "numpy>=1.24",
    "pandas>=2.0",
    "webdataset>=0.2",
    "jsonlines>=4.0",
    "networkx==3.2.1",

    # Hugging Face
    "huggingface-hub>=0.20",

    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.13",

    # Detection (pycocotools needed by detectron2)
    "pycocotools>=2.0",
    "xtcocotools>=1.14",
    "cython>=3.0",

    # Misc
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Optional: MoGe for field-of-view estimation
fov = [
    "moge @ git+https://github.com/microsoft/MoGe.git",
]
# Optional: for training / development
dev = [
    "wandb>=0.16",
    "tensorboard>=2.14",
    "black>=23.0",
    "pytest>=7.0",
]

[project.scripts]
sam3d-setup = "sam3d_wrapper.repo:cli_setup"
sam3d-download = "sam3d_wrapper.download:cli_download"
sam3d-infer = "sam3d_wrapper.inference:cli_infer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sam3d_wrapper"]

[tool.uv]
# Pin torch/torchvision to the PyTorch CUDA index so other packages
# resolve from PyPI normally. Adjust the URL for your CUDA version:
#   cu124 -> CUDA 12.4   cu121 -> CUDA 12.1   cpu -> CPU-only
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
